--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -1,12 +1,13 @@
 body {
 	background-color: #ededd5;
-	font-size: 100.01%; /* 12px [1] */
+/*	font-size: 100.01%; /* 12px [1] */
 	color: black;
 	font-family: arial, sans-serif;
+        overflow:hidden;
 }
 
 #page {
-	margin: 0.5em;
+	/*margin: 0.5em;*/
 }
 
 #header {
@@ -16,20 +17,25 @@ body {
 }
 
 #content {
-  position:absolute;
-  top:104px;
+  position:absolute;  
   bottom:0px;
   left:0px;
   right:0px;
   padding-left: 1em;
   padding-top:6px;
   overflow:auto;
+  top:6em;
   }
 
 #whole_header {
+  height:6em;
+  padding-left: 1em;
+  /*padding-right: 1em;*/
   position:absolute;
   top:0;
-  width:98%;
+  right:0px;
+  left:0px;
+  /*width:98%;*/
   overflow:auto;
   }  
 
